--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     <li data-target="#demo" data-slide-to="2"></li>
                 </ul>
                 <div class="carousel-inner">
-                    <div class="carousel-item active"><img src="../asset/image/chicago.jpg" alt="" class="d-block w-100"></div>
-                    <div class="carousel-item"><img src="../asset/image/la.jpg" alt="" class="d-block w-100"></div>
-                    <div class="carousel-item"><img src="../asset/image/ny.jpg" alt="" class="d-block w-100"></div>
+                    <div class="carousel-item active"><img src="asset/image/chicago.jpg" alt="" class="d-block w-100"></div>
+                    <div class="carousel-item"><img src="asset/image/la.jpg" alt="" class="d-block w-100"></div>
+                    <div class="carousel-item"><img src="asset/image/ny.jpg" alt="" class="d-block w-100"></div>
                 </div>
     
                 <a href="#demo" data-slide="prev" class="carousel-control-prev"><span
